# senteru

./: Cargo.toml  README.md
src/: main.rs  server.rs
web/: package.json  pnpm-lock.yaml
web/src/: app.html
web/src/lib/: index.ts
web/src/routes/: +page.svelte
