[package]
name = "senteru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.16.1"
axum = { version = "0.7.5" }
serde = "1.0.198"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }